# dollars

./: Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: main.yml
scripts/: fmt-nofix.sh  fmt.sh  lint.sh
src/: lib.rs
